--- a/web/index.html
+++ b/web/index.html
@@ -22,8 +22,8 @@ background: linear-gradient(to right, #FFB76B 0%, #FFA73D 30%, #FF7C00 60%, #FF7
 -webkit-text-fill-color: transparent;
 ">To Do List</h1>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="./Panels/LoginPage.jsp">Login</a></li>
                 <li><a href="./Panels/Register.jsp">Register</a>
             </ul>
